uprava prekladu menu

--- a/src/Presenters/templates/PageVisits/default.latte
+++ b/src/Presenters/templates/PageVisits/default.latte
@@ -1,4 +1,4 @@
-{block title}{_'analytics.tracking.pageVisits'}{/block}
+{block title}{_'analytics.tracking.pageVisits.title'}{/block}
 {block content}
     {panel id => analytics-pageVisits, class => analytics-extension}
         {control searchForm}
