--- a/src/Presenters/templates/Visits/default.latte
+++ b/src/Presenters/templates/Visits/default.latte
@@ -1,4 +1,4 @@
-{block title}{_'analytics.tracking.visits'}{/block}
+{block title}{_'analytics.tracking.visits.title'}{/block}
 {block content}
     {panel id => analytics-visitsCharts, class => analytics-extension}
         {control searchForm}
