--- a/src/Presenters/templates/ClickTracking/default.latte
+++ b/src/Presenters/templates/ClickTracking/default.latte
@@ -1,4 +1,4 @@
-{block title}{_'analytics.tracking.clickTracking'}{/block}
+{block title}{_'analytics.tracking.clickTracking.title'}{/block}
 {block content}
 {panel id => analytics-clickCharts, class => analytics-extension}
     {control searchForm}
